--- a/src/app/model/task/task.component.css
+++ b/src/app/model/task/task.component.css
@@ -95,3 +95,12 @@ input[type=checkbox]{
   width: 1em;
   border-radius: 4px;
 }
+
+@media only screen and (max-width: 768px) {
+  .col-6{
+    width: 100%;
+  }
+  .row{
+    flex-direction: column;
+  }
+}
