--- a/src/app/model/task/task.component.css
+++ b/src/app/model/task/task.component.css
@@ -40,7 +40,15 @@
 
 
 .badge{
-  color: #07315a;
+  color: #fff;
+  margin: 0.2em;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+border-radius: 3px;
+  width: 20px;
+  cursor: pointer;
+  background-color: #ff2440;
 }
 
 .tasks li{
