Angular contact form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -308,7 +308,7 @@
     <app-formulaire style="width: 100%"   (contactEvent)="getThisContact($event)"></app-formulaire>
   </div>
   <div class="col-6">
-    <app-afficheur></app-afficheur>
+    <app-afficheur  [selectedContact]="selected"></app-afficheur>
   </div>
 
 
